<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">FinGrow</string>
    <string name="title_home">Home</string>
    <string name="title_documents">Documents</string>
    <string name="title_meetings">Meetings</string>
    <string name="title_chat">Chat</string>
    <string name="title_account">Account</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_name">Not a valid name</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_up_failed">"Sign up failed"</string>
    <string name="title_activity_landing">LandingActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="title_login">Login</string>
    <string name="title_sign_up">Sign Up</string>
    <string name="title_activity_starting_routing">StartingRoutingActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_again">Hello Again!</string>
    <string name="welcome_back">Welcome back, you\'ve\nbeen missed!</string>
    <string name="log_in">Log in</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_to_fingrow">Welcome to\nFinGrow</string>
    <string name="first_landing_description">We help you achieve your goals\nthrough FREE financial mentors!</string>
    <string name="get_started">Get Started!</string>
    <string name="join_our_community">Join our community!</string>
    <string name="name">Name</string>
    <string name="have_account">Already have an account?</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="title_activity_onboarding">OnboardingActivity</string>
    <string name="step_heading">Step %1$d of %2$d</string>
    <string name="main_heading">Welcome %1$s!</string>
    <string name="skip">Skip</string>
    <string name="search">Search</string>
    <string name="notifications">Notifications</string>
    <string name="wallet_coins_description">picture of wallet and coins</string>
    <string name="calendar_target_description">picture of calendar and target</string>
    <string name="assistant_in_pocket">Assistant in\nyour pocket</string>
    <string name="realistic_goals">Setting realistic, long-term goals is\neasier with our professional help!</string>
    <string name="speech_bubble_notepad_description">picture of speech bubble and notepad</string>
    <string name="gain_financial_knowledge">Gain financial\nknowledge</string>
    <string name="tips_and_reminders">Tips and reminders from mentors\nwill help you on your journey!</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="recent_activity">Recent Activity</string>
    <string name="add_goal">Add Goal</string>
    <string name="new_goals_will_appear_here">New goals will appear here!</string>
    <string name="saving_goals">Saving Goals</string>
    <string name="see_all">See all</string>
    <string name="joined_fingrow">Joined FinGrow!</string>
    <string name="just_now">Just now</string>
    <string name="profile_icon">profile icon</string>
    <string name="all_chats">All Chats</string>
    <string name="video_calls">Video Calls</string>
    <string name="Darren_Smith">Darren Smith</string>
    <string name="Darren_desc">Happy to be your mentor!…</string>
    <string name="Shelia_Bates">Shelia Bates</string>
    <string name="Shelia_desc">To continue our conversation…</string>
    <string name="time_1_25">1:25 PM</string>
    <string name="time_2_37">2:37 PM</string>
    <string name="one">1</string>
    <string name="meeting_button">Meeting Button</string>
    <string name="online">Online</string>
    <string name="type_something">Type Something</string>
    <string name="phone">phone</string>
    <string name="videocam">videocam</string>
    <string name="Darren_chat_activity">Darren Chat Activity</string>
    <string name="Darren_message">Happy to be your mentor! Feel free to ask me anything.</string>
    <string name="am1030">10:30 am</string>
    <string name="recent">Recent</string>
    <string name="personal">Personal</string>
    <string name="download">Download</string>
    <string name="credit">Credit</string>
    <string name="ten_items">10 items</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="box">box</string>
    <string name="goal_title">Goal Title</string>
    <string name="goal_amount">Goal Amount</string>
    <string name="title_activity_new_goal">NewGoalActivity</string>
    <string name="title_activity_existing_goal">ExistingGoalActivity</string>
    <string name="what_brings_you_to_fingrow">What brings you to FinGrow?</string>
    <string name="select_your_financial_priorities_below_so_we_can_help_personalize_your_experience">Select your financial priorities below so we can help personalize your experience!</string>
    <string name="manage_my_financial_plan_or_budget">Manage my financial plan or budget</string>
    <string name="track_my_income_and_spending">Track my income and spending</string>
    <string name="get_advice_on_tax_and_investments">Get advice on tax and investments</string>
    <string name="save_for_long_short_term_financial_goals">Save for long/short term financial goals</string>
    <string name="something_else">Something else</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="maybe">Maybe</string>
    <string name="prefer_not_to_say">Prefer not to say</string>
    <string name="what_type_of_financial_advice_would_you_be_interested_in">What type of financial advice would you be interested in?</string>
    <string name="this_would_help_our_algorithms_match_you_with_best_suited_consultants">This would help our algorithms match you with best suited consultants!</string>
    <string name="crisis_and_recovery">Crisis and recovery</string>
    <string name="risk_management">Risk management</string>
    <string name="accounting_advisory">Accounting advisory</string>
    <string name="tax_advisory">Tax advisory</string>
    <string name="this_well_help_us_understand_your_unique_financial_situation">This well help us understand your unique financial situation</string>
    <string name="are_you_dealing_with_any_debt">Are you dealing with any debt?</string>
    <string name="plus_icon">plus icon</string>
    <string name="lowercase_regex">[a-z]</string>
    <string name="uppercase_regex">[A-Z]</string>
    <string name="number_regex" tools:ignore="TypographyDashes">[0-9]</string>
    <string name="symbol_regex" tools:ignore="TypographyDashes">[^a-zA-Z0-9]</string>
    <string name="profile">Profile</string>
    <string name="user_name">User Name</string>
    <string name="start_date">Start Date</string>
    <string name="my_information">My Information</string>
    <string name="mentors">Mentors</string>
    <string name="log_out">Log Out</string>
    <string name="not_sure_yet">Not sure yet</string>
    <string name="under_5k">Under $5K</string>
    <string name="over_120k">Over $120K</string>
    <string name="what_financial_goals_are_you_hoping_to_achieve">What financial goals are you hoping to achieve?</string>
    <string name="goal_types_help">Short-term goals usually help you buy an item on short notice (ex: new phone, new furniture, etc.)\n\nMid-term goals usually help you pay for an event or special day in the somewhat near future (wedding, graduation, etc.)\n\nLong-term goals usually help you plan for situations in the distant future (retirement, paying for children\'s college, etc.)</string>
    <string name="short_term">Short-term</string>
    <string name="mid_term">Mid-term</string>
    <string name="long_term">Long-term</string>
    <string name="what_is_your_annual_gross_household_income">What is your annual gross household income?</string>
    <string name="approximately">Approximately:</string>
    <string name="_5k_or_less">$5K or less</string>
    <string name="how_many_people_live_in_your_household">How many people live in your household?</string>
    <string name="low_or_less">$%1$dK or less</string>
    <string name="high_or_more">$%1$dK or more</string>
    <string name="slider_value_string">$%1$dK</string>
    <string name="num">#</string>
    <string name="ribbon">ribbon</string>
    <string name="_0">$0</string>
    <string name="out_of_0">/$0</string>
    <string name="this_month">This month</string>
    <string name="last_month">Last month</string>
    <string name="overall">Overall</string>
    <string name="when_do_you_want_to_achieve_this_by">When do you want to\nachieve this by?</string>
    <string name="i_m_flexible">I\'m Flexible</string>
    <string name="dollar_sign">$</string>
    <string name="my_new_goal">My New Goal!</string>
    <string name="dollar_0">$0</string>
    <string name="dollar_value">$%1$s</string>
    <string name="slash_value">/%1$s</string>
    <string name="value_left">%1$s left!</string>
    <string name="you_have">"You have "</string>
    <string name="left">left!</string>
    <string name="try_to_save">"Try to save "</string>
    <string name="per">$ per</string>
    <string name="title">Title</string>
    <string name="slash">/</string>
    <string name="percent">%</string>
    <string name="this_is_a">"This is a "</string>
    <string name="flexible_deadline">flexible deadline!</string>
    <string name="dont_forget_to_keep_saving">Don\'t forget to keep saving!</string>
    <string name="matches_activity">MatchesActivity</string>
    <string name="explore">Explore</string>
    <string name="your_advisor_matches">Your advisor matches</string>
    <string name="im_interested">Choose \"I\'m interested\"</string>
    <string name="Experience">Experience</string>
    <string name="linkedin">LinkedIn</string>
    <string name="gmail">gmail</string>
    <string name="heart_interested">I\'m interested</string>
    <string name="senior_advisor">Senior Advisor | Risk Management</string>
    <string name="ffp_foundation">FFP Foundation | 10 years</string>
    <string name="shield">shield</string>
    <string name="confirmed">Confirmed!</string>
    <string name="your_next_steps_should_be_to_notify_your_mentor_so_they_can_assist_you_in_reaching_your_goals">Your next steps should be to notify your mentor so they can assist you in reaching your goals.</string>
    <string name="title_colon">"Title: "</string>
    <string name="amount_colon">"Amount: "</string>
    <string name="end_date_colon">"End Date: "</string>
</resources>