<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="ui.landing.FirstLandingFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="35dp"
        android:layout_weight="1"
        android:src="@drawable/first_landing_view_image"
        android:contentDescription="@string/wallet_coins_description"/>

    <TextView
        android:id="@+id/textHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/welcome_to_fingrow"
        android:textColor="@color/light_grey"
        android:textSize="22sp"
        android:fontFamily="@font/bevietnampro_bold"/>

    <TextView
        android:id="@+id/textDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_landing_description"
        android:textColor="@color/light_grey"
        android:textSize="14sp"
        android:fontFamily="@font/bevietnampro_regular"/>

</LinearLayout>