<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/new_goal_bg"
    android:backgroundTint="@color/light_grey"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    tools:context=".ui.home.NewGoalConfirmationFragment">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/shield"
        android:src="@drawable/last_new_goal_stage_image"
        android:paddingBottom="16dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bevietnampro_semibold"
        android:text="@string/confirmed"
        android:textColor="@color/dark_blue"
        android:textSize="18sp"
        android:paddingBottom="16dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bevietnampro_semibold"
            android:text="@string/title_colon"
            android:textColor="@color/dark_grey"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bevietnampro_semibold"
            android:text=""
            android:textColor="@color/reliable_blue"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bevietnampro_semibold"
            android:text="@string/amount_colon"
            android:textColor="@color/dark_grey"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/amountTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bevietnampro_semibold"
            android:text=""
            android:textColor="@color/reliable_blue"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bevietnampro_semibold"
            android:text="@string/end_date_colon"
            android:textColor="@color/dark_grey"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/endDateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bevietnampro_semibold"
            android:text=""
            android:textColor="@color/reliable_blue"
            android:textSize="14sp" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bevietnampro_semibold"
        android:text="@string/your_next_steps_should_be_to_notify_your_mentor_so_they_can_assist_you_in_reaching_your_goals"
        android:textAlignment="center"
        android:textColor="@color/reliable_blue"
        android:textSize="14sp" />
</LinearLayout>